# relaykey-backend

./: .env  .env.example  Cargo.toml  README.md  docker-compose.yml
.sqlx/: query-01523c87a5377438f73beb21fca5f802db8a20139db889b1729c711affae1ccb.json  query-016f713c73fdd276b97fe4e7fd661fd08e74d16148e928b0c24104f6eef2e81b.json  query-05d00a8d0cfd35375bc065d1303ba37081892476c825523510eaab84c42990e0.json  query-07912573d4b9557bc9c4f6835d34573c9f19e5b2c86200c062e0cfdd836654bd.json  query-082acea1526d78959ee32ebc8093043e85a8f1cfdacc98924f902c5049de0163.json  query-09b78f9eba3ebd401a131e673488a3ed21b65c3cba8b95975b4c3db05e7046a9.json  query-230857dc27f3f24a9853dcaa6c94f4f86613d8a1dc10f19ad71eaf65f4af5dd4.json  query-2d6122e3aba2882933d4010a046d45fe6cb9a877c9f603a902241fdee831cb20.json  query-34c8bec4d245a42a21b593a762976d0345d3afad597e8f4c6ca50d1b1dde4b2c.json  query-3feddcb567a2e1a3cb2edb6eaca4206a05ee4c1247305c11647e15d97ef31317.json  query-45492b2b4fce704ab0c5b97d7209931822087f985da628716116d206dc74d2d2.json  query-4a683fc95a4047aaa2ac3214b743d607db40c3b6347f31c7e02ce44451f2605b.json  query-4d9c28f9d2855763d67cde9c90ec42e7c4becd7f1983e1f6ef6fc44f0bf30d49.json  query-605f270fc8f6c9f78d3c33b68a16049f7eb984acc20c649a303fe9d7f85423e7.json  query-61a328838832b4bccb87d21750ab4584218f1ce0bebbab88294cdb5f9b23a7d6.json  query-63eae90347ccb9b1220432524274e5d56e784fd60c407a6361934ec9bb80921d.json  query-78a0dc9c80cf8dd7a37da03f01fcb0213f1195c11ff7085d480d18a53a7588c8.json  query-78f61690fe111484fca238c78bde4b513c188b3ec7b8dd8f41862a24f9cce5c5.json  query-79bb051e763dd4bea85136c955052053024d37086a6b1d06ae99c23e85343a4a.json  query-812ddf7edd17f5aeef64cb340860174959487fdf1da2890ead09ffa96b57ce3a.json  query-889bef8360505eb999c05c3e208ba9128db1d274173d47347a5939627760574e.json  query-8bf6f3f305b2aac30d933b205f0c90366c0c2328568c1778f0ac42e55324569c.json  query-9161f59d2191fb99235deca01adf6df6ac8bf368a558d64b1ae8de90de8406fc.json  query-9625d18955e19e6aecc5bd85be7fd2bff97960ddac74217a5e09e814d1b92977.json  query-9ea427cfed9f1986fa66bf9f43dd3d3ff75da42cf9c00b83294e6678c0e520b3.json  query-a6c4dbcb8ff10c2e8e3be0466ad50668e5f118ac9e43abfb05dd0ff1687b854a.json  query-b8a51d6f8f4d12d58e91febdfd9c99423e15dffcedec53088fe36674c7a9a190.json  query-bd6f97375b46864b6b6e58e3fc206fe69f23ae6c6c65153b49133445dd45de91.json  query-caaf2f09d3406d96d78cf15b5aa52ebf2a5973741326960d22cbf4e8aa330db5.json  query-dae17017ee53a89268045e172f0a3ca617064a87bb25537eaebaecf8e3049172.json  query-f2db8d87a5b34ca73c55638a9071f605207fec4c510e8a95af768e89fb5f6112.json  query-f5443ed0e3b6ceb4c4a6d02cd7504167d761c92ac7d36925ef9561af70649d61.json  query-f54a67fce9b35b4c0077a15f6e519d270efdba3c2dc5735091e969099bbdcb07.json  query-f75c3067126c75e374935eef072b6767ea5094eade2bed6dc4a1184ebe92a505.json  (+1 more)
crates/relaykey-app/: Cargo.toml
crates/relaykey-app/src/: app.rs  auth.rs  health.rs  lib.rs  main.rs  metrics.rs  proxy.rs  settings.rs  shutdown.rs  state.rs  telemetry.rs  usage.rs
crates/relaykey-app/src/admin/: errors.rs  keygen.rs  mod.rs  usage.rs  virtual_keys.rs
crates/relaykey-app/src/limits/: middleware.rs  mod.rs
crates/relaykey-app/src/policies/: allowlist.rs  cache.rs  mod.rs
crates/relaykey-app/src/retry/: budget.rs  classify.rs  mod.rs  partner.rs  policy.rs
crates/relaykey-app/src/x402/: config.rs  hash.rs  middleware.rs  mod.rs  noop.rs  provider.rs  registry.rs  stub.rs
crates/relaykey-app/tests/: health.rs
crates/relaykey-db/: Cargo.toml
crates/relaykey-db/src/: lib.rs  pool.rs
crates/relaykey-db/src/queries/: admin.rs  metrics.rs  mod.rs  payment_intents.rs  policies.rs  virtual_keys.rs  x402_metrics.rs
docs/: api.md  security.md  (+2 more)
(+42 files in other folders)
