[package]
name = "relaykey-app"
version = "0.1.0" 
edition = 2021

[dependencies]
relaykey-core = { path = "../relaykey-core" }
relaykey-db = { path = "../relaykey-db" }

axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "request-id"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

uuid = { version = "1", features = ["v4"] }
http = "1"