[package]
name = "relaykey-app"
version = "0.1.0" 
edition = "2021"
default-run = "relaykey-app"

[dependencies]
relaykey-core = { path = "../relaykey-core" }
relaykey-db = { path = "../relaykey-db" }

axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5", features = ["timeout", "util"] }
tower-http = { version = "0.5", features = ["trace", "request-id", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

uuid = { version = "1", features = ["v4"] }
http = "1"
redis = { version = "0.25.4", features = ["tokio-comp"] }
sqlx = "0.8.6"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
bytes = "1"
url = "2"
