[package]
name = "relaykey-db"
version = "0.1.0"
edition = "2021"

[dependencies]
relaykey-core = { path = "../relaykey-core" }

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid", "time"] }
redis = { version = "0.25", features = ["tokio-comp"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
chrono = "0.4.43"
