[package]
name = "relaykey-db"
version = "0.1.0"
edition = "2021"

[dependencies]
relaykey-core = { path = "../relaykey-core" }

sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "migrate",
  "uuid",
  "json",
  "chrono"
] }
redis = { version = "0.25", features = ["tokio-comp"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
